# water-intelligent-management

./: .env.example  .gitignore  README.md  interactive_water_network_viz.ipynb  neo4j_examples.py  pyproject.toml  water_network_exploration.ipynb
docs/: 00-water-network-proposal.md  01-project-roadmap.md  02-neo4j-fundamentals.md  03-water-network-modeling.md  04-graphrag-implementation.md  05-langgraph-guide.md  06-mcp-guide.md  07-advanced-analytics.md  08-deployment-guide.md  zz-water-network-mvp-prompt.md
docs/mini_projects/: mini-project-1.md  mini-project-2.md  mini-project-3.md  mini-project-4.md  mini-project-5.md  mini-project-6.md
